Fixing up the Paul Renner style on mobile #22

--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,7 @@ body {
   font-family: futura-pt, sans-serif;
   font-size: 22px;
   background-color: var(--colorLightGreen);
+  color: var(--colorBlack);
 }
 
 .underline {
@@ -42,6 +43,14 @@ p {
   text-transform: uppercase;
   font-size: 2.6rem;
   font-weight: 500;
+}
+
+.br-1 {
+  margin-left: 1rem;
+}
+
+.br-2 {
+  margin-left: 2rem;
 }
 
 /* Slanted */
@@ -188,6 +197,10 @@ p {
   display: flex;
 }
 
+.paul_renner-intro-text {
+  margin: var(--spacerSmall);
+}
+
 .paul_renner-title {
   margin-top: 3rem;
   width: 100vw;
@@ -200,7 +213,9 @@ p {
 }
 
 .paul_renner-image {
-  max-width: 100vw;
+  max-width: 70vw;
+  margin: 2rem 0;
+  margin-left: 15vw;
 }
 
 .paul_story {
@@ -423,16 +438,15 @@ p {
     display: flex;
   }
 
-  .paul_renner-title {
-    margin: 8rem;
-  }
-
   .paul_renner-intro-text {
+    margin: 8rem;
+    margin-right: 0;
     max-width: 63vw;
   }
 
   .paul_renner-image {
     max-height: 100vh;
+    margin: 0;
   }
 
   .paul_story-text {
